RESOLVED FIXED281573
Fix Regression caused by Annotating Notification Endpoints
https://bugs.webkit.org/show_bug.cgi?id=281573
Summary Fix Regression caused by Annotating Notification Endpoints
Darryl
Reported 2024-10-16 07:31:21 PDT
.
Attachments
Darryl
Comment 1 2024-10-16 07:31:23 PDT
Darryl
Comment 2 2024-10-16 07:32:28 PDT
EWS
Comment 3 2024-10-16 10:02:05 PDT
Committed 285272@main (896db7f6a56b): <https://commits.webkit.org/285272@main> Reviewed commits have been landed. Closing PR #35278 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.