Fix Regression caused by Annotating Notification Endpoints https://bugs.webkit.org/show_bug.cgi?id=281573 rdar://137993671

Reviewed by Sihui Liu.

Fix Regression caused by Annotating Notification Endpoints

* Source/WebKit/NetworkProcess/Notifications/NetworkNotificationManager.cpp:
(WebKit::connectionToWebProcess):
(WebKit::NetworkNotificationManager::sharedPreferencesForWebProcess const):

Canonical link: https://commits.webkit.org/285272@main